chapter1/ex04B/results/task1.txt

Status: PASSED!
Check: 1
Test: Assign variable `whole_num`
Reason: whole_num\s*=\s*int\(input\(".*"\)\)` was found in the program.None
Timestamp: 2024-10-22 23:55:29.960642

Status: FAILED!
Check: 2
Test: Docstring added
Reason: Unable to find '^("""|''').*(
.*)*("""|''')' in the program.
Error : str - AssertionError
Timestamp: 2024-10-22 23:55:29.960998

Status: FAILED!
Reason: Unable to run main.py
Error:   File "/home/runner/work/9780357421796_python-fundamentals-1e-90d64395-38b0-4952-862a-0c8397e7ddb5/9780357421796_python-fundamentals-1e-90d64395-38b0-4952-862a-0c8397e7ddb5/python/chapter1/ex04B/main.py", line 4
    ''''''''''
             ^
SyntaxError: unterminated string literal (detected at line 4)

Timestamp: 2024-10-22 23:55:30.034086

Status: FAILED!
Reason: Unable to run main.py
Error:   File "/home/runner/work/9780357421796_python-fundamentals-1e-90d64395-38b0-4952-862a-0c8397e7ddb5/9780357421796_python-fundamentals-1e-90d64395-38b0-4952-862a-0c8397e7ddb5/python/chapter1/ex04B/main.py", line 4
    ''''''''''
             ^
SyntaxError: unterminated string literal (detected at line 4)

Timestamp: 2024-10-22 23:55:30.034151

Status: FAILED!
Reason: Unable to run main.py
Error:   File "/home/runner/work/9780357421796_python-fundamentals-1e-90d64395-38b0-4952-862a-0c8397e7ddb5/9780357421796_python-fundamentals-1e-90d64395-38b0-4952-862a-0c8397e7ddb5/python/chapter1/ex04B/main.py", line 4
    ''''''''''
             ^
SyntaxError: unterminated string literal (detected at line 4)

Timestamp: 2024-10-22 23:55:30.133061

Status: FAILED!
Reason: Unable to run main.py
Error:   File "/home/runner/work/9780357421796_python-fundamentals-1e-90d64395-38b0-4952-862a-0c8397e7ddb5/9780357421796_python-fundamentals-1e-90d64395-38b0-4952-862a-0c8397e7ddb5/python/chapter1/ex04B/main.py", line 4
    ''''''''''
             ^
SyntaxError: unterminated string literal (detected at line 4)

Timestamp: 2024-10-22 23:55:30.133172
